--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -465,6 +465,7 @@
 				}
 				concernhtml2 += concernhtml;
 				$("#lastconcenered").after(concernhtml2);
+				mui('.mui-slider').slider().gotoItem(0);
 				//concenered end**************************************/
 				//buy way
 				var buy_sell_flag = comdbasic[0].buy_sell_flag;
