--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -595,7 +595,7 @@ function compressImg(path) {
 
 function uploadimage(path) {
 	var targetimg = path;
-	var server = "http://192.168.1.8:7998/commodity/release/upload/";
+	var server = Api.url.Commodity.imgupload;
 	//open loading button
 	var wt = plus.nativeUI.showWaiting();
 	var task = plus.uploader.createUpload(server, {
