用户页面地址设置和头像上传测试，request页面layout作成

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -442,7 +442,8 @@ function publishs() {
 		ok: function(data) {
 			Log.d("success");
 			alert(TextMessage.pro_logininfo);
-			location.reload();
+			//location.reload();
+			mui.back();
 		},
 		ng: function(data) {
 			Log.d(data);
