--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -65,7 +65,7 @@
 											</div>
 										</div>
 									</li>
-									<li class="mui-table-view-cell mui-media mui-col-xs-6 detail">
+									<li class="mui-table-view-cell mui-media mui-col-xs-6 translate">
 										<a id="2" href="#">
 											<img class="mui-media-object ka_imgoption" src="../../../images/muwu.jpg">
 											<div class="mui-media-body">
@@ -84,7 +84,7 @@
 											</div>
 										</div>
 										<div class="mui-pull-right ka_heartlocation">
-											<span class="mui-icon-extra mui-icon-extra-heart-filled ka_heartgrey" onclick="good(this)"></span>
+											<span class="mui-icon-extra mui-icon-extra-heart-filled ka_heartgrey"></span>
 											<div class="ka_heartnum" id="91num">2</div>
 										</div>
 									</li>
