--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -48,7 +48,7 @@
 			mui.init();
 			window.addEventListener('rid', function(event) {
 				var rid = event.detail.id;
-				alert(rid);
+				//alert(rid);
 			});
 		</script>
 	</body>
