--- a/kankan/pages/main/products/translatelist.html
+++ b/kankan/pages/main/products/translatelist.html
@@ -32,9 +32,8 @@
 				</li>
 				<li class="mui-table-view-cell">
 					<div style="text-align: center;">
-						<button type="button" class="mui-btn mui-btn-grey">Cancel</button>
-						<button type="button" class="mui-btn mui-btn-red">Confirm</button>
-						<button type="button" class="mui-btn mui-btn-yellow">send message</button>
+						<button type="button" class="mui-btn mui-btn-grey">交易中止</button>
+						<button type="button" class="mui-btn mui-btn-red">交易开始</button>
 					</div>
 				</li>
 			</ul>
@@ -43,7 +42,7 @@
 				<div>
 					<div style="text-align: left;" class="mui-pull-left"><img src="../../../images/muwu.jpg" style="width: 30px; height: 30px;border-radius: 50%;" /></div>
 					<div class="mui-pull-left" style="margin-bottom: 1em;">
-						<span style="color: #777777;font-size: 12px;margin-top: -2.5em;margin-left: 3em;width: 70%; float: left; border: 1px #000000 solid;word-wrap:break-word;padding: 1em;border-radius: 5px;">
+						<span style="color: #777777;font-size: 12px;margin-top: -2.5em;margin-left: 3em;width: 70%; float: left; border: 1px #FFFFFF solid;word-wrap:break-word;padding: 1em;border-radius: 5px;background-color: #FFFFFF;">
 								Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1
 						</span>
 					</div>
@@ -52,7 +51,7 @@
 			<div>
 				<div style="text-align: left;padding-right: 1em;" class="mui-pull-right"><img src="../../../images/cbd.jpg" style="width: 30px; height: 30px;border-radius: 50%;" /></div>
 				<div class="mui-pull-left" style="margin-bottom: 1em;">
-					<span style="color: #777777;font-size: 12px;margin-top: -2.5em;margin-left: 3em;width: 70%; float: left; border: 1px #000000 solid;word-wrap:break-word;padding: 1em;border-radius: 5px;">
+					<span style="color: #777777;font-size: 12px;margin-top: -2.5em;margin-left: 3em;width: 70%; float: left; border: 1px #FFFFFF solid;word-wrap:break-word;padding: 1em;border-radius: 5px;background-color:#FFFFFF;">
 							Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange xchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1Exchange information 1
 					</span>
 				</div>
@@ -70,7 +69,7 @@
 			mui.init();
 			window.addEventListener('traid', function(event) {
 				var traid = event.detail.id;
-				alert(traid);
+				//alert(traid);
 			});
 		</script>
 	</body>
