--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -9,10 +9,9 @@
 		<link rel="stylesheet" type="text/css" href="../../../css/icons-extra.css" />
 		<link rel="stylesheet" href="../../../css/kankan_home.css" />
 	</head>
-
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<a class="mui-icon-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title lang" data-locale="det_procoment"></h1>
 		</header>
 		<div class="mui-content ka_mainbox">
@@ -68,21 +67,24 @@
 		<script src="../../../js/sha256.js"></script>
 		<script src="../../../js/common.js"></script>
 		<script type="text/javascript">
-			mui.init(
-//				{
-//				beforeback: function(){
-//			    	var wobj = plus.webview.getWebviewById("detail");
-//					wobj.reload(true);
-//			    },
-//			}
-			);
+			mui.init();
 			window.addEventListener('comid', function(event) {
 				var id = event.detail.id;
+				//var id="19";
 				$("#commodity_id").val(id);
 				$("#leave_msg_detail").attr("placeholder",TextMessage.contentlength);
 				getccomments(id);
+				
 			});
-
+			//back refresh 
+			mui(".mui-bar-nav").on("tap","a",function(){
+				var view = plus.webview.currentWebview().opener();
+		    	var id=$("#commodity_id").val();
+				mui.fire(view,'cid',{
+				    id:id
+				});
+				mui.back();
+			});
 			function getccomments(rid) {
 				var params = {
 					"commodity_id": rid
@@ -112,7 +114,7 @@
 					if(pcommentinfo.nick_name==""){
 						var uname = pcommentinfo.user_name;
 					}
-					var content = pcommentinfo.leave_msg_detail;
+					var content = pcommentinfo.msg_detail;
 					var time = pcommentinfo.ins_date;
 					var html = new Util.StringBuilder();
 					html.append('<div class="comtent mui-pull-left"><div class="mui-pull-left">')
@@ -129,7 +131,6 @@
 				}
 			}
 			function formSubmit(){
-				//alert("bbbbb");
 				var contents=document.commodity_comments.leave_msg_detail.value;
 				if(contents==""){
 					alert(TextMessage.commenttestnull);
@@ -145,7 +146,7 @@
 				var param2 = {
 					//"tokencheck":"+GGzMiM28W8dy+XxzQAl4x3L5fHNACXjh\/PqKa19BIs=f18de066a468abc7ec408dfba0ff14f7d49c455aabcdf54ad28547bb7d7470ab",
 					"commodity_id":pid,
-					"leave_msg_detail":contents
+					"msg_detail":contents
 				};
 				//console.log(contents);
 				Repository.Commodity.comments(param2, {
