修改登录之后首页没有数据的bug。

--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -14,8 +14,12 @@
 				margin: 20px auto 0px auto;
 			}
 			
-			.mui-input-group {
+			.mui-input-group:first {
 				margin-top: 30px;
+			}
+			
+			.mui-input-group {
+				margin-top: -1px;
 			}
 			
 			.mui-input-group label {
@@ -84,6 +88,10 @@
 				text-align: center;
 				padding: 20px 10px;
 				font-size: 16px;
+			}
+			
+			#regForm {
+				margin-top: 45px;
 			}
 			
 			#regForm label {
