--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -107,16 +107,23 @@
 
 				var userPhoto = document.getElementById("user");
 				var isLogin = plus.storage.getItem("LoginFlag");
+				Log.i("home.html isLogin " + isLogin)
 				userPhoto.addEventListener('click', function(event) {
 					console.log("userPhoto clicked.");
 					if(!network) {
 						console.log(TextMessage.not_network);
 						mui.toast(TextMessage.not_network);
 					}
-					if(!isLogin) {
-						mui.fire(plus.webview.getWebviewById('pullrefresh_with_tab'), 'showMenu', {});
+					if(isLogin == "isLogin") {
+						mui.openWindow({
+							id:"user",
+							url:"user/user.html",
+							waiting: {
+								autoShow:false
+							}
+						});
 					} else {
-						// TODO not login
+						mui.fire(plus.webview.getWebviewById('pullrefresh_with_tab'), 'showMenu', {});
 					}
 				});
 			});
